# pskmap

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  external_spots.rs  lib.rs  main.rs  models.rs  mqtt.rs  pota.rs  pskreporter.rs  sota.rs  station_finder.rs
src/components/: ControlPanel.tsx  MapView.tsx  MySignalSection.tsx  Sidebar.tsx  SpotTable.tsx  StationFinderControls.tsx  StationFinderMap.tsx  StationFinderSection.tsx  StationFinderTable.tsx  StatsPanel.tsx
src/hooks/: useExternalSpots.ts  useGrayline.ts  useOnlineStatus.ts  useSpots.ts
src/lib/: bands.ts  external-types.ts  modes.ts  program-flags.ts  solar.ts  types.ts
