[package]
name = "pskmap"
version = "0.1.0"
description = "A better PSKreporter spotting interface"
authors = ["you"]
edition = "2021"

[lib]
name = "pskmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
rumqttc = "0.25.1"
